--- a/Thuc hanh Chuyen doi nhiet do/bai1.html
+++ b/Thuc hanh Chuyen doi nhiet do/bai1.html
@@ -5,23 +5,43 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Temperature converter</h1>
-<h3>Type a value tin the Fahrenheit field to convert the value to Celcius:</h3>
-Fahrenheit: <label><input type="text" id="input" oninput="cal()"></label>
-<p>Celcius: <span id="output"></span></p>
+<h1>Chuyển đổi nhiệt độ</h1>
+<h3>Nhập số cần đổi:</h3>
+<table>
+    <tr>
+        <td>Meter: <label><input type="text" id="inputMeter" oninput="mtF()"></label></td>
+        <td>Feet: <label><input type="text" id="inputFeet" oninput="ftM()"></label></td>
+    </tr>
+    <tr>
+        <td>Feet: <span id="outputFeet"></span></td>
+        <td>Meter: <span id="outputMeter"></span></td>
+    </tr>
+</table>
 </body>
 </html>
 <script>
-    function convert(f) {
-        let cel = (f - 32) / 1.8
-        return cel;
+    function footToMeter(foot) {
+        meter = 0.305 * foot
+        return meter
     }
-    function cal() {
-        let fah = +document.getElementById('input').value;
-        if (fah == "") {
-            document.getElementById('output').innerHTML = "";
+    function meterToFoot(meter) {
+        foot = 3.279 * meter
+        return foot
+    }
+    function mtF() {
+        let met = +document.getElementById('inputMeter').value;
+        if (met == "") {
+            document.getElementById('outputFeet').innerHTML = "";
         } else {
-        document.getElementById('output').innerHTML = convert(fah);
+            document.getElementById('outputFeet').innerHTML = meterToFoot(met);
+        }
+    }
+    function ftM() {
+        let feet = +document.getElementById('inputFeet').value;
+        if (feet == "") {
+            document.getElementById('outputMeter').innerHTML = "";
+        } else {
+            document.getElementById('outputMeter').innerHTML = footToMeter(feet);
         }
     }
 </script>
