--- a/Thuc hanh Chuyen doi nhiet do/bai1.html
+++ b/Thuc hanh Chuyen doi nhiet do/bai1.html
@@ -5,43 +5,23 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Chuyển đổi nhiệt độ</h1>
-<h3>Nhập số cần đổi:</h3>
-<table>
-    <tr>
-        <td>Meter: <label><input type="text" id="inputMeter" oninput="mtF()"></label></td>
-        <td>Feet: <label><input type="text" id="inputFeet" oninput="ftM()"></label></td>
-    </tr>
-    <tr>
-        <td>Feet: <span id="outputFeet"></span></td>
-        <td>Meter: <span id="outputMeter"></span></td>
-    </tr>
-</table>
+<h1>Temperature converter</h1>
+<h3>Type a value tin the Fahrenheit field to convert the value to Celcius:</h3>
+Fahrenheit: <label><input type="text" id="input" oninput="cal()"></label>
+<p>Celcius: <span id="output"></span></p>
 </body>
 </html>
 <script>
-    function footToMeter(foot) {
-        meter = 0.305 * foot
-        return meter
+    function convert(f) {
+        let c = (f - 32) / 1.8
+        return c;
     }
-    function meterToFoot(meter) {
-        foot = 3.279 * meter
-        return foot
-    }
-    function mtF() {
-        let met = +document.getElementById('inputMeter').value;
-        if (met == "") {
-            document.getElementById('outputFeet').innerHTML = "";
+    function cal() {
+        let fah = +document.getElementById('input').value;
+        if (fah == "") {
+            document.getElementById('output').innerHTML = "";
         } else {
-            document.getElementById('outputFeet').innerHTML = meterToFoot(met);
-        }
-    }
-    function ftM() {
-        let feet = +document.getElementById('inputFeet').value;
-        if (feet == "") {
-            document.getElementById('outputMeter').innerHTML = "";
-        } else {
-            document.getElementById('outputMeter').innerHTML = footToMeter(feet);
+            document.getElementById('output').innerHTML = convert(fah);
         }
     }
 </script>
